import RouteListTestCases from "../RouteListTestCases";
import testRunner from "../../../Services/testRunner/testRunner";

RouteListTestCases.map(testRunner);
